--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/castle"
     tools:context=".MainActivity">
 
     <TextView
@@ -12,7 +13,7 @@
         android:gravity="center"
         android:text="@string/app_name"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="35dp"
         android:textColor="@color/BlackColor"
         android:textStyle="bold"
         android:textSize="20sp"/>
@@ -37,14 +38,6 @@
         android:layout_marginTop="20dp"
         android:textColor="@color/BlackColor"/>
 
-    <Button
-        android:id="@+id/textQuitGame"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/quit_game"
-        android:layout_below="@+id/textContinueGame"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
-        android:textColor="@color/BlackColor"/>
+
 
 </RelativeLayout>
