--- a/app/src/main/res/layout/hall_room.xml
+++ b/app/src/main/res/layout/hall_room.xml
@@ -3,30 +3,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/backgroundscreensepia"
+    android:background="@drawable/hall"
     tools:context=".MainActivity">
 
     <TextView
-        android:id="@+id/textTitleMain"
+        android:id="@+id/textInsideHallRoom"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="@string/app_name"
+        android:text="@string/inside_hall_room"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="35dp"
         android:textColor="@color/BlackColor"
         android:textStyle="bold"
         android:textSize="20sp"/>
 
-    <TextView
-        android:id="@+id/textTeaser"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
-        android:text="@string/teaser"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginBottom="25dp"
-        android:layout_marginRight="25dp"
-        android:textColor="@color/whiteColor"/>
+
+
+
 
 </RelativeLayout>
